# Protenix

./: .gitignore  README.md  inference_demo.sh  pyproject.toml  requirements.txt
configs/: configs_base.py  configs_data.py  configs_model_type.py
docs/: kernels.md  supported_models.md  training_inference_instructions.md
examples/: 2lwu.cif
examples/example_with_json_template/: a_seq_2.json  demo_ab.json  h_seq.json
protenix/: version.py
protenix/data/: filter.py  infer_data_pipeline.py  json_maker.py  parser.py  utils.py
protenix/data/core/: ccd.py  featurizer.py  filter.py  geometry_featurizer.py  parser.py
protenix/data/inference/: infer_dataloader.py  json_parser.py  json_to_feature.py
protenix/data/pipeline/: data_pipeline.py  dataset.py
protenix/data/template/: template_featurizer.py  template_parser.py  template_utils.py
protenix/data/tools/: logger.py  rewrite_biotite.py
protenix/model/: generator.py  protenix.py  sample_confidence.py
protenix/model/layer_norm/: layer_norm.py  torch_ext_compile.py
protenix/model/triangular/: layers.py
protenix/tfg/: __init__.py  config.py  engine.py  potentials.py
protenix/web_service/: colab_request_parser.py  colab_request_utils.py  dependency_url.py
protenixscore/: __init__.py  cli.py  msa_colabfold.py  score.py
runner/: batch_inference.py  inference.py
scripts/: cif_to_pdb.py  prepare_training_data.py
scripts/database/: download_protenix_data.sh
tests/: test_json_template_parser.py  test_sample_confidence.py
